<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_date_label">Date?</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="starttime_label">Start time?</string>
    <string name="endtime_label">End time?</string>

    <string name="newevent_date_first">01-01-2017</string>
    <string name="starttime_first">10:00</string>
    <string name="newevent_hint">\???</string>
</resources>